--- a/z-css/about.css
+++ b/z-css/about.css
@@ -27,7 +27,7 @@
 }
 
 .about-image img {
-  max-width: 30%;
+  max-width: 80%;
   border-radius: 10px;
 }
 
@@ -40,13 +40,67 @@
   align-items: center; 
 }
 
-.about-content h1 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
 .about-content p {
   font-size: 16px;
   line-height: 1.5;
   color: #333;
+  font-weight: 400;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+
+  .about {
+    margin-top: 60px; 
+  }
+
+  .about-card {
+    padding: 20px;
+  }
+
+  .about-image img {
+    max-width: 80%; 
+  }
+
+  .about-content {
+    margin-left: 0; 
+    text-align: center; 
+  }
+
+  .about-content p {
+    font-size: 14px; 
+    text-align: left; 
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .about {
+    margin-top: 60px; 
+    flex-direction: column; 
+    align-items: center; 
+  }
+
+  .about-card {
+    padding: 20px;
+    margin-top: 20px; 
+    text-align: center; 
+  }
+
+  .about-image img {
+    max-width: 80%; 
+  }
+
+  .about-content {
+    margin-left: 0; 
+    text-align: center; 
+  }
+
+  .about-content h2 {
+    font-size: 24px; /* Adjust heading size */
+    margin-bottom: 15px;
+  }
+
+  .about-content p {
+    font-size: 14px; /* Adjust paragraph size */
+    text-align: left; /* Left-align text */
+  }
 }
