--- a/z-css/home.css
+++ b/z-css/home.css
@@ -14,6 +14,11 @@
     z-index: 1;
 }
 
+.hero-content h1{
+    font-weight: 800;
+    font-size: 40px;
+}
+
 /* content section (cards) */
 .content {
     padding: 40px 0;
@@ -61,3 +66,42 @@
     background-color: #000;
     color: #fff;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .hero {
+    width: 100%;
+    padding: 80px 0;
+    }
+  
+    .hero-content {
+    max-width: 100%;
+    margin: 0 auto;
+    }
+  
+    .card {
+    margin: 20px;
+    width: 300px;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    .hero {
+    padding: 60px 0;
+    }
+  
+    .hero-content {
+    max-width: 90%;
+    margin: 0 auto;
+    }
+  
+    .content {
+    flex-direction: column; 
+    align-items: center;
+    }
+  
+    .card {
+    align-items: center;
+    width: 80%; 
+    margin-bottom: 20px; 
+    }
+  }
