--- a/z-css/photo.css
+++ b/z-css/photo.css
@@ -1,50 +1,6 @@
 *{
     font-family: Arial, sans-serif;
   }
-  /*Header*/
-  header {
-      background-color: #333;
-      color: #fff;
-      padding: 10px 0;
-      text-align: center;
-  }
-  
-  /* navigation bar */
-  
-  .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 20px;
-    }
-    
-    .logo a {
-      text-decoration: none;
-      color: #000000;
-      font-size: 24px;
-      font-weight: bold;
-    }
-    
-    .nav-links {
-      list-style: none;
-      display: flex;
-    }
-    
-    .nav-links li {
-      margin: 0 15px;
-    }
-    
-    .nav-links a {
-      text-decoration: none;
-      color: #000000;
-      font-weight: bold;
-      transition: color 0.3s;
-    }
-    
-    .nav-links a:hover {
-      color: #111e46;
-    }
-
 /* Gallery Part */
 
 .gallery {
@@ -53,14 +9,30 @@
 }
 
 .tags {
-    margin-bottom: 10px;
+    text-align: center;
+    margin: 20px 20px;
 }
 
 .tag-button {
+    padding: 8px 16px;
     margin: 5px;
-    padding: 5px 10px;
+    cursor: pointer;
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
 }
+
+.tag-button.active {
+    font-weight: bolder;
+    background-color: #851c1c; 
+  }
+
+  .tag-button:hover {
+    font-weight: bold;
+    background-color: #d43939; 
+  }  
 
 .grid {
     display: grid;
