--- a/z-css/portfolio.css
+++ b/z-css/portfolio.css
@@ -43,3 +43,16 @@
   font-size: 14px;
   color: #ccc;
 }
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .gallery {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 20px;
+  }
+}
