--- a/z-portfolio/portfolio1img.css
+++ b/z-portfolio/portfolio1img.css
@@ -4,3 +4,17 @@
     gap: 20px;
     margin-top: 20px;
   }
+
+  @media screen and (min-width: 768px) and (max-width: 1024px) {
+    .photo-gallery {
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+  }
+
+  @media screen and (max-width: 767px) {
+    .photo-gallery {
+      grid-template-columns: 1fr;
+      gap: 10px;
+    }
+  }
